tests/parser/invalidinput/parseexternvoc.idp
vocabulary V {
}

vocabulary V2 {
  extern vocabulary V
}

